@@ -60,6 +60,9 @@
     </li>
     <li>[Bugfix] Set checksum for large file uploads in fileInfo metadata (Backblaze B2)</li>
     <li>[Bugfix] Default ACL for new buckets has changed to private (S3)</li>
+    <li>[Bugfix] Failure duplicating files in vault (Cryptomator) (<a
+            href="https://trac.cyberduck.io/ticket/10017">#10017</a>)
+    </li>
 </ul>
 
 <p>
@@ -78,6 +81,12 @@
             href="https://trac.cyberduck.io/ticket/9983">#9983</a>)
     </li>
     <li>[Bugfix] Handle expired authentication token (Backblaze B2)</li>
+    <li>[Bugfix] "Open in Putty" toolbar button always disabled (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/9965">#9965</a>)
+    </li>
+    <li>[Bugfix] Updater ignores custom installation location (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/9782">#9782</a>)
+    </li>
 </ul>
 
 <p>
