@@ -12,6 +12,7 @@ https://cyberduck.io/
 - [Bugfix] Timeout uploading larger files (Google Drive) (#10010)
 - [Bugfix] Set checksum for large file uploads in fileInfo metadata (Backblaze B2)
 - [Bugfix] Default ACL for new buckets has changed to private (S3)
+- [Bugfix] Failure duplicating files in vault (Cryptomator) (#10017)
 
 6.1
 - [Feature] Search files fast without recursively listing directories (OneDrive)
@@ -25,6 +26,8 @@ https://cyberduck.io/
 - [Bugfix] Always trust invalid certificate setting not remembered (Windows)
 - [Bugfix] Unable to rename files larger than 5 GB (S3) (#9983)
 - [Bugfix] Handle expired authentication token (Backblaze B2)
+- [Bugfix] "Open in Putty" toolbar button always disabled (Windows) (#9965)
+- [Bugfix] Updater ignores custom installation location (Windows) (#9782)
 
 6.0.4 [https://trac.cyberduck.io/milestone/6.0.4]
 - [Bugfix] Failure to upload to root of vault (Cryptomator)
